# SignalGenerator_pub

./: .gitignore  CONTRIBUTORS.md  LICENSE  README.md  generator_2d.py  generator_finitelength_opt.py  generator_prenormalized.py  main.py  misc.py  pyproject.toml  requirements-dev-raw.txt  requirements.txt  server.py  sigalModifications.py  staticBundler.py  wsgi.py  yaml2signal.py
.github/: dependabot.yml
static/: .htaccess
static/css/: main.css  theme.css
static/js/: attenuate.js  componentInputHandler.js  componentListHandler.js  globals.js  main.js  plotlyShapes.js  poreLogic.js  preloader.js  sendAndPlot.js
templates/: index.html
