[project]
name = "signalgenerator-pub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "matplotlib>=3.10.9",
    "numba>=0.65.1",
    "pandas>=3.0.3",
    "scipy>=1.17.1",
]
